updates to CPT site

--- a/products/00-index.html
+++ b/products/00-index.html
@@ -3,4 +3,4 @@ layout: page
 title: Products
 permalink: /products/
 ---
-{% include product-list.html %}
+{% include product-list.html withpic="true" %}
