--- a/services/00-index.html
+++ b/services/00-index.html
@@ -3,4 +3,4 @@ layout: page
 title: Services
 permalink: /services/
 ---
-{% include service-list.html %}
+{% include service-list.html withpic="true" %}
